# rustcraft_server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy_and_tests.yml  test.yml
src/: logger.rs  main.rs  rcserver.rs  server.rs
src/crypto/: aes_util.rs  auth_hash.rs  mod.rs  rsa_util.rs
src/custom_types/: bitmasks.rs  identifier.rs  mod.rs  position.rs
src/network/: connection.rs  mod.rs  packet.rs  packet_utils.rs
src/network/packets/: mod.rs
src/network/packets/configuration/clientbound/: disconnect.rs  feature_flags.rs  finish_configuration.rs  keep_alive.rs  plugin_message.rs
src/network/packets/configuration/serverbound/: acknowledge_finish_configuration.rs  client_information.rs  keep_alive.rs  plugin_message.rs
src/network/packets/handshaking/serverbound/: handshake.rs
src/network/packets/login/clientbound/: disconnect.rs  encryption_request.rs  login_success.rs
src/network/packets/login/serverbound/: encryption_response.rs  login_acknowledged.rs  login_start.rs
src/network/packets/status/clientbound/: ping_response.rs  status_response.rs
src/network/packets/status/serverbound/: ping_request.rs  status_request.rs
src/utils/: config.rs  errors.rs  logger.rs  macros.rs  mod.rs  mojauth.rs  packet_utils.rs
