[package]
name = "rustcraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
colored = "2.1.0"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.4"
hex = "0.4.3"
json = "0.12.4"
lazy_static = "1.5.0"
once_cell = "1.19.0"
serde = "1.0.205"
serde_derive = "1.0.205"
toml = "0.8.19"
