[package]
name = "rustcraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bytes = "1.7.1"
cfb8 = "0.8.1"
chrono = "0.4.38"
cipher = "0.4.4"
colored = "2.1.0"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.4"
hematite-nbt = "0.5.2"
hex = "0.4.3"
json = "0.12.4"
once_cell = "1.19.0"
pkcs8 = "0.10.2"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = [ "blocking" ] }
rsa = "0.9.6"
serde = "1.0.205"
serde_derive = "1.0.205"
serde_json = "1.0.125"
sha1 = "0.10.6"
toml = "0.8.19"
uuid = { version = "1.10.0", features = [ "v4", "fast-rng" ] }
    